--- a/item.css
+++ b/item.css
@@ -76,6 +76,8 @@ p {
 .item-image{
     width: 400px;
     height: 300px;
+    background-image:url("https://www.lrt.lt/img/2021/11/05/1101460-530964-756x425.jpg") ;
+    background-size: cover;
 }
 
 .item-name {
