--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ a {
     color: #1da1f2;
 }
 
-.adds {
+.items {
     width: 100%;
 }
 
@@ -62,29 +62,48 @@ a {
     border-color: rgb(202, 200, 200);
 }
 
-.add {
+.item-wrapper {
     width: 100%;
     height: 150px;
     background-color: blanchedalmond;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
-.add-photo {
+.item-image {
     background-color: aqua;
+    background-image: url("https://www.lrt.lt/img/2021/11/05/1101460-530964-756x425.jpg");
+    background-size: cover;
     height: 100%;
     width: 200px;
     min-width: 200px;
 }
 
-.add-info {
+.item-info {
     margin-left: 20px;
     display: flex;
     gap: 10px;
     flex-direction: column;
 }
 
-.add-name {
+.item-button-wrapper{
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item-button{
+    width: 50%;
+    height: 30%;
+    background-color: #1da1f2;
+    color: white;
+    border: none;
+}
+
+.item-name {
     margin-top: 3px;
     height: 40px;
     font-size: 20px;
@@ -93,13 +112,13 @@ a {
     overflow: hidden;
 }
 
-.add-description {
+.item-description {
     height: 60px;
     line-height: 20px;
     overflow: hidden;
 }
 
-.add-price {
+.item-price {
     font-size: 25px;
     color: #1da1f2;
     font-weight: 600;
