--- a/main.css
+++ b/main.css
@@ -13,7 +13,6 @@ header {
 
 main {
     width: 70%;
-    height: 500px;
     margin: auto;
     background-color: beige;
     display: flex;
@@ -56,7 +55,8 @@ a {
 }
 
 .divider {
-    height: 2px;
+    height: 3px;
+    margin-bottom: 2px;
     border-bottom-style: solid;
     border-width: 1px;
     border-color: rgb(202, 200, 200);
@@ -65,15 +65,13 @@ a {
 .item-wrapper {
     width: 100%;
     height: 150px;
-    background-color: blanchedalmond;
     display: flex;
     align-items: center;
-    cursor: pointer;
+    position: relative;
 }
 
 .item-image {
-    background-color: aqua;
-    background-image: url("https://www.lrt.lt/img/2021/11/05/1101460-530964-756x425.jpg");
+    margin-left: 5px;
     background-size: cover;
     height: 100%;
     width: 200px;
@@ -81,6 +79,7 @@ a {
 }
 
 .item-info {
+    margin-right: 30%;
     margin-left: 20px;
     display: flex;
     gap: 10px;
@@ -93,6 +92,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    right: 0;
 }
 
 .item-button{
@@ -101,6 +102,9 @@ a {
     background-color: #1da1f2;
     color: white;
     border: none;
+    cursor: pointer;
+    position: absolute;
+    right: 10%;
 }
 
 .item-name {
@@ -109,7 +113,7 @@ a {
     font-size: 20px;
     font-weight: 500;
     color: #1da1f2;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .item-description {
